--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="mobile-device"><span class="icon-tablet"></span></div>
 		</div>
 		<div class="site-preview">
-			<iframe width="100%" height="100%" src="http://getbootstrap.com" frameborder="0"></iframe>
+			<iframe width="100%" height="100%" src="https://getbootstrap.com" frameborder="0"></iframe>
 		</div>
 	</div>
 </body>
