--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<div class="wrapper">
 		<div class="devices-holder">
 			<div class="desktop-device"><span class="icon-display"></span></div>
-			<div class="tablet-device"><span class="icon-mobile"></span></div>
-			<div class="mobile-device"><span class="icon-tablet"></span></div>
+			<div class="tablet-device"><span class="icon-tablet"></span></div>
+			<div class="mobile-device"><span class="icon-mobile"></span></div>
 		</div>
 		<div class="site-preview">
 			<iframe width="100%" height="100%" src="https://getbootstrap.com" frameborder="0"></iframe>
