--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 	<div class="wrapper">
 		<div class="devices-holder">
-			<div class="desktop-device"><span class="icon-display"></span></div>
-			<div class="tablet-device"><span class="icon-tablet"></span></div>
-			<div class="mobile-device"><span class="icon-mobile"></span></div>
+			<div id="desktop-device"><span class="icon-display"></span></div>
+			<div id="tablet-device"><span class="icon-tablet"></span></div>
+			<div id="mobile-device"><span class="icon-mobile"></span></div>
 		</div>
 		<div class="site-preview">
 			<iframe width="100%" height="100%" src="https://getbootstrap.com" frameborder="0"></iframe>
