--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="wrapper">
 		<div class="devices-holder">
-			<div id="desktop-device"><span class="icon-display"></span></div>
+			<div id="desktop-device" class="active"><span class="icon-display"></span></div>
 			<div id="tablet-device"><span class="icon-tablet"></span></div>
 			<div id="mobile-device"><span class="icon-mobile"></span></div>
 		</div>
